fix: changes the navbar spacing

--- a/frontend/src/sections/Navbar/Navbar.module.css
+++ b/frontend/src/sections/Navbar/Navbar.module.css
@@ -34,7 +34,7 @@
 }
 
 .navItem {
-  margin-left: var(--space-md);
+  margin-left: var(--space-xl);
 }
 
 .navLink {
